feat:cart modified

--- a/public/index.html
+++ b/public/index.html
@@ -39,6 +39,11 @@
     crossorigin="anonymous"
     referrerpolicy="no-referrer"
   />
+
+  <link
+  rel="stylesheet"
+  href="https://unpkg.com/mockman-js@latest/dist/style.css"
+/>
     <title>React App</title>
   </head>
   <body>
